--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,11 +6,10 @@ steps:
   - name: 'gcr.io/cloud-builders/npm'
     args: ['run', 'build:prod']
   # Deploy to Firebase Hosting
+  # Deploy to Firebase Hosting
   - name: 'gcr.io/cloud-builders/npm'
-    args: ['install', '-g', 'firebase-tools']
-  - name: 'gcr.io/cloud-builders/npm'
-    args: ['deploy', '--project=sazonapp-322e1', '--only', 'hosting']
-    entrypoint: 'firebase'
+    entrypoint: 'bash'
+    args: ['-', '-c', 'npm install -g firebase-tools && firebase deploy --project=sazonapp-322e1 --only hosting']
 
 options:
   logging: CLOUD_LOGGING_ONLY
