--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,16 +1,18 @@
 steps:
-  # Install dependencies
+  # Step 1: Install Node.js dependencies
+  # Using the official Cloud Build npm builder
   - name: 'gcr.io/cloud-builders/npm'
     args: ['install']
-  # Build the application for production
+
+  # Step 2: Build the Angular application
+  # Using the official Cloud Build npm builder
   - name: 'gcr.io/cloud-builders/npm'
-    args: ['run', 'build:prod']
-  # Deploy to Firebase Hosting
-  - name: 'gcr.io/cloud-builders/firebase'
-    args: [ 'deploy', '--project=sazonapp', '--only', 'hosting' ]
+    args: ['./node_modules/.bin/ng', 'build', '--configuration', 'production', '--aot']
+
+  # Step 3: Deploy to Firebase Hosting
+  # !!! FIX: Use the dedicated Firebase builder image !!!
+  - name: 'gcr.io/cloud-builders/firebase' # Use this image, it includes Firebase CLI
+    args: ['deploy', '--project=sazonapp', '--only', 'hosting']
 
 options:
   logging: CLOUD_LOGGING_ONLY
-
-
-
