--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,17 +1,13 @@
 steps:
-  # Step 1: Install Node.js dependencies
-  # Using the official Cloud Build npm builder
-  - name: 'gcr.io/cloud-builders/npm'
-    args: ['install']
+  # Paso 1: Instalar dependencias de Node.js y construir la aplicación Angular
+  - name: 'node:20-slim' # Usar una versión LTS compatible de Node.js
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - 'npm install && ./node_modules/.bin/ng build sazon_del_bueno_frontend --configuration=production --aot'
 
-  # Step 2: Build the Angular application
-  # Using the official Cloud Build npm builder
-  - name: 'gcr.io/cloud-builders/npm'
-    args: ['./node_modules/.bin/ng', 'build', '--configuration', 'production', '--aot']
-
-  # Step 3: Deploy to Firebase Hosting
-  # !!! FIX: Use the dedicated Firebase builder image !!!
-  - name: 'gcr.io/cloud-builders/firebase' # Use this image, it includes Firebase CLI
+  # Paso 2: Desplegar en Firebase Hosting
+  - name: 'gcr.io/cloud-builders/firebase' # Usar la imagen dedicada de Firebase
     args: ['deploy', '--project=sazonapp', '--only', 'hosting']
 
 options:
