--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,8 +7,11 @@ steps:
       - 'npm install && ./node_modules/.bin/ng build sazon_del_bueno_frontend --configuration=production --aot'
 
   # Paso 2: Desplegar en Firebase Hosting
-  - name: 'gcr.io/cloud-builders/firebase' # Usar la imagen dedicada de Firebase
-    args: ['deploy', '--project=sazonapp', '--only', 'hosting']
+  - name: 'node:20-slim' # Usar la misma imagen de Node.js
+    entrypoint: 'bash'
+    args:
+      - '-c'
+      - 'npm install -g firebase-tools && firebase deploy --project=sazonapp --only hosting'
 
 options:
   logging: CLOUD_LOGGING_ONLY
