--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,7 +10,8 @@ steps:
   - name: 'node:20-slim' # Usar la misma imagen de Node.js
     entrypoint: 'bash'
     args:
-      args: [' -c', 'npm install -g firebase-tools && firebase deploy --project=sazonapp-322e1 --only hosting']
+      - '-c'
+      - 'npm install -g firebase-tools && firebase deploy --project=sazonapp-322e1 --only hosting'
 
 options:
   logging: CLOUD_LOGGING_ONLY
