--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,7 +11,7 @@ steps:
     entrypoint: 'bash'
     args:
       - '-c'
-      - 'npm install -g firebase-tools && firebase deploy --project=sazonapp-322e1 --only hosting'
+      - 'npm install -g firebase-tools && firebase deploy --project=sazonapp-322e1 --only hosting --force'
 
 options:
   logging: CLOUD_LOGGING_ONLY
