--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,13 +1,13 @@
 steps:
-  # Paso 1: Instalar dependencias de Node.js y construir la aplicación Angular
-  - name: 'node:20-slim' # Usar una versión LTS compatible de Node.js
+  # Paso 1: Limpiar el directorio de salida y construir la aplicación Angular
+  - name: 'node:20-slim'
     entrypoint: 'bash'
     args:
       - '-c'
-      - 'npm install && ./node_modules/.bin/ng build sazon_del_bueno_frontend --configuration=production --aot'
+      - 'rm -rf dist && npm install && ./node_modules/.bin/ng build sazon_del_bueno_frontend --configuration=production --aot'
 
   # Paso 2: Desplegar en Firebase Hosting
-  - name: 'node:20-slim' # Usar la misma imagen de Node.js
+  - name: 'node:20-slim'
     entrypoint: 'bash'
     args:
       - '-c'
